app1/deployment_app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: application1
  name: application1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: application1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
