app1/service_app1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app1-service
  name: app1-service
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: application1
  type: ClusterIP
status:
  loadBalancer: {}
